Use `APP_UMBREL_BITCOIN_NODE_IP` instead of `BITCOIN_IP`

--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     stop_grace_period: 1m
     environment:
       PORT: "$APP_BITFEED_API_PORT"
-      BITCOIN_HOST: "$BITCOIN_IP"
+      BITCOIN_HOST: "$APP_UMBREL_BITCOIN_NODE_IP"
       BITCOIN_ZMQ_RAWTX_PORT: "$BITCOIN_ZMQ_RAWTX_PORT"
       BITCOIN_ZMQ_RAWBLOCK_PORT: "$BITCOIN_ZMQ_RAWBLOCK_PORT"
       BITCOIN_ZMQ_SEQUENCE_PORT: "$BITCOIN_ZMQ_SEQUENCE_PORT"
