--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -20,8 +20,8 @@ services:
         NBXPLORER_BIND: 0.0.0.0
         NBXPLORER_CHAINS: "btc"
         NBXPLORER_SIGNALFILEDIR: "/data"
-        NBXPLORER_BTCRPCURL: "http://$BITCOIN_IP:$BITCOIN_RPC_PORT"
-        NBXPLORER_BTCNODEENDPOINT: $BITCOIN_IP:$BITCOIN_P2P_PORT
+        NBXPLORER_BTCRPCURL: "http://$APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_RPC_PORT"
+        NBXPLORER_BTCNODEENDPOINT: $APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_P2P_PORT
         NBXPLORER_BTCRPCUSER: $BITCOIN_RPC_USER
         NBXPLORER_BTCRPCPASSWORD: $BITCOIN_RPC_PASS
     networks:
