--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/backend/cache
     environment:
-      CORE_RPC_HOST: $BITCOIN_IP
+      CORE_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       CORE_RPC_PORT: $BITCOIN_RPC_PORT
       CORE_RPC_USERNAME: $BITCOIN_RPC_USER
       CORE_RPC_PASSWORD: $BITCOIN_RPC_PASS
