--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     user: "1000:1000"
     environment:
       # Bitcoin Core connection details
-      SQUEAKNODE_BITCOIN_RPC_HOST: $BITCOIN_IP
+      SQUEAKNODE_BITCOIN_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       SQUEAKNODE_BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
       SQUEAKNODE_BITCOIN_RPC_USER: $BITCOIN_RPC_USER
       SQUEAKNODE_BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
