--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       BITCOIN_S_DLCNODE_PROXY_ENABLED: "true"
       BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${TOR_PROXY_IP}:${TOR_PROXY_PORT}"
       BITCOIN_S_DLCNODE_EXTERNAL_IP: $SUREDBITS_WALLET_P2P_HIDDEN_SERVICE
-      BITCOIN_S_BITCOIND_HOST: $BITCOIN_IP
+      BITCOIN_S_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_S_BITCOIND_PORT: $BITCOIN_RPC_PORT
       BITCOIN_S_BITCOIND_USER: $BITCOIN_RPC_USER
       BITCOIN_S_BITCOIND_PASSWORD: $BITCOIN_RPC_PASS
