--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       # Docker requirements
       BTCEXP_HOST: 0.0.0.0
       # Bitcoin Core
-      BTCEXP_BITCOIND_HOST: $BITCOIN_IP
+      BTCEXP_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       BTCEXP_BITCOIND_PORT: $BITCOIN_RPC_PORT
       BTCEXP_BITCOIND_USER: $BITCOIN_RPC_USER
       BTCEXP_BITCOIND_PASS: $BITCOIN_RPC_PASS
