--- a/lightning-shell/docker-compose.yml
+++ b/lightning-shell/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ${APP_DATA_DIR}/data:/data
     environment:
         APP_PASSWORD: "${APP_PASSWORD}"
-        BITCOIN_IP: "${BITCOIN_IP}"
+        BITCOIN_IP: "${APP_UMBREL_BITCOIN_NODE_IP}"
         BITCOIN_RPC_PORT: "${BITCOIN_RPC_PORT}"
         BITCOIN_RPC_USER: "${BITCOIN_RPC_USER}"
         BITCOIN_RPC_PASS: "${BITCOIN_RPC_PASS}"
