--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       PORT: $APP_NODE_RED_PORT
       BITCOIN_NETWORK: $BITCOIN_NETWORK
-      BITCOIN_IP: $BITCOIN_IP
+      BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $BITCOIN_RPC_USER
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
