--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       NODE_JWT_SECRET: $SAMOURAI_SERVER_NODE_JWT_SECRET
 
       # BITCOIN
-      BITCOIND_IP: $BITCOIN_IP
+      BITCOIND_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIND_RPC_PORT: $BITCOIN_RPC_PORT
       BITCOIND_RPC_USER: $BITCOIN_RPC_USER
       BITCOIND_RPC_PASSWORD: $BITCOIN_RPC_PASS
