--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       INTERNAL_IP: $APP_URBIT_BITCOIN_CONNECTOR_IP
       ELECTRUM_IP: $ELECTRUM_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
-      BITCOIN_IP: $BITCOIN_IP
+      BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $BITCOIN_RPC_USER
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
