Use `APP_UMBREL_BITCOIN_DATA_DIR`

--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${APP_DATA_DIR}/loop:/loop
       - ${APP_DATA_DIR}/boltz:/boltz:ro
       - ${LND_DATA_DIR}:/lnd:ro
-      - ${BITCOIN_DATA_DIR}:/bitcoin:ro
+      - ${APP_UMBREL_BITCOIN_DATA_DIR}:/bitcoin:ro
     entrypoint: /data/entrypoint.sh
     environment:
         # App config
