--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       ELECTRS_DB_DIR: "/data/db"
       ELECTRS_COOKIE_FILE: "/data/.bitcoin/${BITCOIN_NETWORK}/.cookie"
     volumes:
-      - "${BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
+      - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
       - "${APP_DATA_DIR}/data/electrs:/data"
     ports:
       - "${ELECTRUM_PORT}:${ELECTRUM_PORT}"
