--- a/umbrel-fulcrum/docker-compose.yml
+++ b/umbrel-fulcrum/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     init: true
     command: "${FULCRUM_COMMAND}"
     volumes:
-      - "${BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
+      - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
       - "${APP_DATA_DIR}/data:/data"
     restart: always
     networks:
