--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     restart: on-failure
     stop_grace_period: 15m30s
     volumes:
-      - "${BITCOIN_DATA_DIR}:/data/.bitcoin"
+      - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin"
     ports:
       - "${BITCOIN_P2P_PORT}:${BITCOIN_P2P_PORT}"
     networks:
