--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       jm_socks5_host: $TOR_PROXY_IP
       jm_socks5_port: $TOR_PROXY_PORT
       jm_rpc_host: $APP_UMBREL_BITCOIN_NODE_IP
-      jm_rpc_port: $BITCOIN_RPC_PORT
+      jm_rpc_port: $APP_UMBREL_BITCOIN_RPC_PORT
       jm_rpc_user: $BITCOIN_RPC_USER
       jm_rpc_password: "${BITCOIN_RPC_PASS}"
       jm_rpc_wallet_file: jam_default
