--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ${APP_DATA_DIR}/data:/backend/cache
     environment:
       CORE_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      CORE_RPC_PORT: $BITCOIN_RPC_PORT
+      CORE_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       CORE_RPC_USERNAME: $BITCOIN_RPC_USER
       CORE_RPC_PASSWORD: $BITCOIN_RPC_PASS
       ELECTRUM_HOST: $ELECTRUM_IP
