--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       BITCOIN_S_DLCNODE_PROXY_SOCKS5: "${TOR_PROXY_IP}:${TOR_PROXY_PORT}"
       BITCOIN_S_DLCNODE_EXTERNAL_IP: $SUREDBITS_WALLET_P2P_HIDDEN_SERVICE
       BITCOIN_S_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      BITCOIN_S_BITCOIND_PORT: $BITCOIN_RPC_PORT
+      BITCOIN_S_BITCOIND_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_S_BITCOIND_USER: $BITCOIN_RPC_USER
       BITCOIN_S_BITCOIND_PASSWORD: $BITCOIN_RPC_PASS
       BITCOIN_S_SERVER_RPC_PASSWORD: $APP_PASSWORD
