--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       PORT: "3005"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
-      RPC_PORT: "${BITCOIN_RPC_PORT}"
+      RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
       RPC_USER: "${BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
       BITCOIN_RPC_HIDDEN_SERVICE: "${UMBREL_BITCOIN_RPC_HIDDEN_SERVICE}"
