--- a/umbrel-bitcoin/torrc.template
+++ b/umbrel-bitcoin/torrc.template
@@ -4,7 +4,7 @@ HiddenServicePort $BITCOIN_P2P_PORT $APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_P2P_POR
 
 # Bitcoin Core RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
-HiddenServicePort $BITCOIN_RPC_PORT $APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_RPC_PORT
+HiddenServicePort $APP_UMBREL_BITCOIN_RPC_PORT $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_RPC_PORT
 
 # Bitcoin Core Frontend Hidden Service
 HiddenServiceDir /data/app-$APP_ID
