--- a/lightning-shell/docker-compose.yml
+++ b/lightning-shell/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
         APP_PASSWORD: "${APP_PASSWORD}"
         BITCOIN_IP: "${APP_UMBREL_BITCOIN_NODE_IP}"
-        BITCOIN_RPC_PORT: "${BITCOIN_RPC_PORT}"
+        BITCOIN_RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
         BITCOIN_RPC_USER: "${BITCOIN_RPC_USER}"
         BITCOIN_RPC_PASS: "${BITCOIN_RPC_PASS}"
         LND_IP: "${LND_IP}"
