--- a/specter-desktop/docker-compose.yml
+++ b/specter-desktop/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       BTC_RPC_USER: $BITCOIN_RPC_USER
       BTC_RPC_PASSWORD: $BITCOIN_RPC_PASS
       BTC_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
-      BTC_RPC_PORT: $BITCOIN_RPC_PORT
+      BTC_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BTC_RPC_PROTOCOL: http
     networks:
       default:
