--- a/umbrel-electrumx/docker-compose.yml
+++ b/umbrel-electrumx/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     depends_on:
       - bitcoind
     environment:
-      DAEMON_URL: "http://${BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${BITCOIN_RPC_PORT}"
+      DAEMON_URL: "http://${BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       COIN: BitcoinSegwit
       NET: "${BITCOIN_NETWORK}"
     volumes:
