--- a/umbrel-fulcrum/docker-compose.yml
+++ b/umbrel-fulcrum/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_USER: "${BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
-      RPC_PORT: "${BITCOIN_RPC_PORT}"
+      RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
     networks:
       default:
         ipv4_address: $APP_UMBREL_FULCRUM_IP
