--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       TOR_PROXY_IP: "${TOR_PROXY_IP}"
       TOR_PROXY_PORT: "${TOR_PROXY_PORT}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
-      RPC_PORT: "${BITCOIN_RPC_PORT}"
+      RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
       RPC_USER: "${BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
       LND_NETWORK: "${BITCOIN_NETWORK}"
