--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       ELECTRUM_IP: $ELECTRUM_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
-      BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
+      BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $BITCOIN_RPC_USER
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
       BITCOIN_RPC_AUTH: $BITCOIN_RPC_AUTH
