Use `APP_UMBREL_BITCOIN_P2P_PORT`

--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         NBXPLORER_CHAINS: "btc"
         NBXPLORER_SIGNALFILEDIR: "/data"
         NBXPLORER_BTCRPCURL: "http://$APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_RPC_PORT"
-        NBXPLORER_BTCNODEENDPOINT: $APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_P2P_PORT
+        NBXPLORER_BTCNODEENDPOINT: $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_P2P_PORT
         NBXPLORER_BTCRPCUSER: $BITCOIN_RPC_USER
         NBXPLORER_BTCRPCPASSWORD: $BITCOIN_RPC_PASS
     networks:
