--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     volumes:
       - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin"
     ports:
-      - "${BITCOIN_P2P_PORT}:${BITCOIN_P2P_PORT}"
+      - "${APP_UMBREL_BITCOIN_P2P_PORT}:${APP_UMBREL_BITCOIN_P2P_PORT}"
     networks:
       default:
         ipv4_address: $APP_UMBREL_BITCOIN_NODE_IP
