--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       ELECTRS_LOG_FILTERS: "INFO"
       ELECTRS_NETWORK: "${BITCOIN_NETWORK}"
       ELECTRS_DAEMON_RPC_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
-      ELECTRS_DAEMON_P2P_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${BITCOIN_P2P_PORT}"
+      ELECTRS_DAEMON_P2P_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_P2P_PORT}"
       ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:${ELECTRUM_PORT}"
       ELECTRS_SERVER_BANNER: "Umbrel Electrs (${APP_VERSION})"
       ELECTRS_DB_DIR: "/data/db"
