--- a/umbrel-bitcoin/torrc.template
+++ b/umbrel-bitcoin/torrc.template
@@ -1,6 +1,6 @@
 # Bitcoin Core P2P Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $BITCOIN_P2P_PORT $APP_UMBREL_BITCOIN_NODE_IP:$BITCOIN_P2P_PORT
+HiddenServicePort $APP_UMBREL_BITCOIN_P2P_PORT $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_P2P_PORT
 
 # Bitcoin Core RPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
