Use `APP_UMBREL_BITCOIN_ZMQ_RAWTX_PORT`

--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       PORT: "$APP_BITFEED_API_PORT"
       BITCOIN_HOST: "$APP_UMBREL_BITCOIN_NODE_IP"
-      BITCOIN_ZMQ_RAWTX_PORT: "$BITCOIN_ZMQ_RAWTX_PORT"
+      BITCOIN_ZMQ_RAWTX_PORT: "$APP_UMBREL_BITCOIN_ZMQ_RAWTX_PORT"
       BITCOIN_ZMQ_RAWBLOCK_PORT: "$APP_UMBREL_BITCOIN_ZMQ_RAWBLOCK_PORT"
       BITCOIN_ZMQ_SEQUENCE_PORT: "$BITCOIN_ZMQ_SEQUENCE_PORT"
       BITCOIN_RPC_PORT: "$APP_UMBREL_BITCOIN_RPC_PORT"
