--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       BITCOIND_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIND_RPC_USER: $BITCOIN_RPC_USER
       BITCOIND_RPC_PASSWORD: $BITCOIN_RPC_PASS
-      BITCOIND_ZMQ_RAWTXS: $BITCOIN_ZMQ_RAWTX_PORT
+      BITCOIND_ZMQ_RAWTXS: $APP_UMBREL_BITCOIN_ZMQ_RAWTX_PORT
       BITCOIND_ZMQ_BLK_HASH: $BITCOIN_ZMQ_HASHBLOCK_PORT
 
       # EXPLORER
