Use `APP_UMBREL_BITCOIN_NETWORK`

--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       LNBITS_BACKEND_WALLET_CLASS: LndRestWallet
       LND_REST_ENDPOINT: https://$LND_IP:$LND_REST_PORT/
       LND_REST_CERT: "/lnd/tls.cert"
-      LND_REST_MACAROON: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+      LND_REST_MACAROON: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
 
       # App
       LNBITS_SITE_TITLE: "LNbits - Umbrel"
