--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ${LND_DATA_DIR}:/lnd:ro
     environment:
       PORT: $APP_NODE_RED_PORT
-      BITCOIN_NETWORK: $BITCOIN_NETWORK
+      BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $BITCOIN_RPC_USER
