--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/wallet:/home/bitcoin-s/.bitcoin-s
     environment:
-      BITCOIN_S_NETWORK: $BITCOIN_NETWORK
+      BITCOIN_S_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       BITCOIN_S_KEYMANAGER_ENTROPY: $APP_SEED  
       BITCOIN_S_PROXY_ENABLED: "false"
       BITCOIN_S_TOR_ENABLED: "false"
