--- a/umbrel-electrumx/docker-compose.yml
+++ b/umbrel-electrumx/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     environment:
       DAEMON_URL: "http://${BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       COIN: BitcoinSegwit
-      NET: "${BITCOIN_NETWORK}"
+      NET: "${APP_UMBREL_BITCOIN_NETWORK}"
     volumes:
       - ${APP_DATA_DIR}/data:/data
     restart: always
