--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       # LND environment variables
       LND_RPC_AUTHORITY: "$LND_IP:$LND_GRPC_PORT"
       TLS_CERT_PATH: "/lnd/tls.cert"
-      INVOICES_MACAROON_PATH: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/invoice.macaroon"
+      INVOICES_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/invoice.macaroon"
 
       # App specific environment variables
       FILES_DIR: "/files"
