--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         - ${APP_DATA_DIR}/data/nbxplorer:/data
     environment:
         NBXPLORER_DATADIR: "/data"
-        NBXPLORER_NETWORK: "$BITCOIN_NETWORK"
+        NBXPLORER_NETWORK: "$APP_UMBREL_BITCOIN_NETWORK"
         NBXPLORER_PORT: 32838
         NBXPLORER_BIND: 0.0.0.0
         NBXPLORER_CHAINS: "btc"
@@ -44,12 +44,12 @@ services:
         BTCPAY_DATADIR: "/data"
         BTCPAY_PLUGINDIR: "/data/plugins"
         BTCPAY_DOCKERDEPLOYMENT: "false"
-        BTCPAY_POSTGRES: "User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Database=btcpayserver$BITCOIN_NETWORK"
-        BTCPAY_NETWORK: "$BITCOIN_NETWORK"
+        BTCPAY_POSTGRES: "User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Database=btcpayserver$APP_UMBREL_BITCOIN_NETWORK"
+        BTCPAY_NETWORK: "$APP_UMBREL_BITCOIN_NETWORK"
         BTCPAY_BIND: 0.0.0.0:$APP_BTCPAY_SERVER_PORT
         BTCPAY_CHAINS: "btc"
         BTCPAY_BTCEXPLORERURL: "http://$APP_BTCPAY_SERVER_NBXPLORER_IP:32838"
-        BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$LND_IP:$LND_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
+        BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$LND_IP:$LND_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
         BTCPAY_SOCKSENDPOINT: $TOR_PROXY_IP:$TOR_PROXY_PORT
     networks:
       default:
