--- a/lightning-terminal/docker-compose.yml
+++ b/lightning-terminal/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     command:
         - --uipassword_env=APP_PASSWORD
         - --insecure-httplisten=0.0.0.0:$APP_LIGHTNING_TERMINAL_PORT
-        - --network="$BITCOIN_NETWORK"
+        - --network="$APP_UMBREL_BITCOIN_NETWORK"
         - --lnd-mode="remote"
         - --remote.lnd.rpcserver=$LND_IP:$LND_GRPC_PORT
-        - --remote.lnd.macaroonpath="/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+        - --remote.lnd.macaroonpath="/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
         - --remote.lnd.tlscertpath="/lnd/tls.cert"
     networks:
       default:
