--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       LND_IP: $LND_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
-      BITCOIN_NETWORK: $BITCOIN_NETWORK
+      BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
       APP_DOMAIN: $APP_DOMAIN
       APP_PASSWORD: $APP_PASSWORD
