--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     user: "1000:1000"
     environment:
       # GLOBAL
-      COMMON_BTC_NETWORK: $BITCOIN_NETWORK
+      COMMON_BTC_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       DOJO_VERSION_TAG: 1.15.0
       NET_DOJO_TOR_IPV4: $TOR_PROXY_IP
       TOR_SOCKS_PORT: $TOR_PROXY_PORT
@@ -106,7 +106,7 @@ services:
       - "--cli.mix.clientsPerPool=1"
       - "--resync"
     environment:
-      WHIRLPOOL_BITCOIN_NETWORK: $BITCOIN_NETWORK
+      WHIRLPOOL_BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       WHIRLPOOL_DOJO: "on"
       WHIRLPOOL_DOJO_IP: $APP_SAMOURAI_SERVER_IP
     volumes:
@@ -123,11 +123,11 @@ services:
     volumes:
       - ${APP_DATA_DIR}/nginx/wait-for:/wait-for
       - ${APP_DATA_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ${APP_DATA_DIR}/nginx/${BITCOIN_NETWORK}.conf:/etc/nginx/sites-enabled/dojo.conf
+      - ${APP_DATA_DIR}/nginx/${APP_UMBREL_BITCOIN_NETWORK}.conf:/etc/nginx/sites-enabled/dojo.conf
       - ${APP_DATA_DIR}/nginx/connect.conf:/etc/nginx/sites-enabled/connect.conf
       - ${APP_DATA_DIR}/nginx/connect:/var/www/connect
     environment:
-      COMMON_BTC_NETWORK: $BITCOIN_NETWORK
+      COMMON_BTC_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       DOJO_LOCAL_PORT: $APP_SAMOURAI_SERVER_DOJO_PORT
       DOJO_HIDDEN_SERVICE: $SAMOURAI_SERVER_DOJO_HIDDEN_SERVICE
       WHIRLPOOL_HIDDEN_SERVICE: $SAMOURAI_SERVER_WHIRLPOOL_HIDDEN_SERVICE
