--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       LND_DATA_DIR: $LND_DATA_DIR
       LND_HOST: $LND_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
-      MACAROON_FILE: /lnd/data/chain/bitcoin/${BITCOIN_NETWORK}/invoice.macaroon
+      MACAROON_FILE: /lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/invoice.macaroon
       TLS_FILE: /lnd/tls.cert
       APP_PASSWORD: $APP_PASSWORD
     networks:
