--- a/sparkkiosk/docker-compose.yml
+++ b/sparkkiosk/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       LND_GRPC_ENDPOINT: $LND_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
       LND_GRPC_CERT: "/lnd/tls.cert"
-      LND_GRPC_MACAROON: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+      LND_GRPC_MACAROON: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
 
       # App
       APP_HIDDEN_SERVICE: http://$APP_HIDDEN_SERVICE
