--- a/sphinx-relay/docker-compose.yml
+++ b/sphinx-relay/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       CONNECT_UI: "true"
       LND_PORT: $LND_GRPC_PORT
       TLS_LOCATION: /lnd/tls.cert
-      MACAROON_LOCATION: /lnd/data/chain/bitcoin/${BITCOIN_NETWORK}/admin.macaroon
-      LND_LOG_LOCATION: /lnd/logs/bitcoin/${BITCOIN_NETWORK}/lnd.log
+      MACAROON_LOCATION: /lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/admin.macaroon
+      LND_LOG_LOCATION: /lnd/logs/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/lnd.log
     networks:
       default:
         ipv4_address: $APP_SPHINX_RELAY_IP
