--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       SQUEAKNODE_LND_HOST: $LND_IP
       SQUEAKNODE_LND_RPC_PORT: $LND_GRPC_PORT
       SQUEAKNODE_LND_TLS_CERT_PATH: "/lnd/tls.cert"
-      SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+      SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
 
       # Tor environment variables
       SQUEAKNODE_TOR_PROXY_IP: $TOR_PROXY_IP
@@ -39,7 +39,7 @@ services:
       SQUEAKNODE_WEBADMIN_USERNAME: "umbrel"
       SQUEAKNODE_WEBADMIN_PASSWORD: "${APP_PASSWORD}"
 
-      SQUEAKNODE_NODE_NETWORK: "$BITCOIN_NETWORK"
+      SQUEAKNODE_NODE_NETWORK: "$APP_UMBREL_BITCOIN_NETWORK"
       SQUEAKNODE_NODE_SQK_DIR_PATH: "/sqk"
       SQUEAKNODE_NODE_MAX_SQUEAKS: 10000
 
