--- a/tallycoin-connect/docker-compose.yml
+++ b/tallycoin-connect/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ${APP_DATA_DIR}/data:/data
     environment:
       LND_SOCKET: "$LND_IP:$LND_GRPC_PORT"
-      LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$BITCOIN_NETWORK/admin.macaroon"
+      LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
       LND_TLSCERT_PATH: "/lnd/tls.cert"
       CONFIG_FILE: "/data/tallycoin_api.key"
       TALLYCOIN_PASSWD_CLEARTEXT: "$APP_PASSWORD"
