--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -27,13 +27,13 @@ services:
     restart: always
     environment:
       ELECTRS_LOG_FILTERS: "INFO"
-      ELECTRS_NETWORK: "${BITCOIN_NETWORK}"
+      ELECTRS_NETWORK: "${APP_UMBREL_BITCOIN_NETWORK}"
       ELECTRS_DAEMON_RPC_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       ELECTRS_DAEMON_P2P_ADDR: "${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_P2P_PORT}"
       ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:${ELECTRUM_PORT}"
       ELECTRS_SERVER_BANNER: "Umbrel Electrs (${APP_VERSION})"
       ELECTRS_DB_DIR: "/data/db"
-      ELECTRS_COOKIE_FILE: "/data/.bitcoin/${BITCOIN_NETWORK}/.cookie"
+      ELECTRS_COOKIE_FILE: "/data/.bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/.cookie"
     volumes:
       - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
       - "${APP_DATA_DIR}/data/electrs:/data"
