--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -21,13 +21,13 @@ services:
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
       RPC_USER: "${BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
-      LND_NETWORK: "${BITCOIN_NETWORK}"
+      LND_NETWORK: "${APP_UMBREL_BITCOIN_NETWORK}"
       LND_HOST: "${APP_UMBREL_LIGHTNING_NODE_IP}"
       LND_REST_HIDDEN_SERVICE_FILE: "${UMBREL_LIGHTNING_REST_HIDDEN_SERVICE}"
       LND_GRPC_HIDDEN_SERVICE_FILE: "${UMBREL_LIGHTNING_GRPC_HIDDEN_SERVICE}"
       TLS_FILE: "/data/.lnd/tls.cert"
-      MACAROON_DIR: "/data/.lnd/data/chain/bitcoin/${BITCOIN_NETWORK}/"
-      CHANNEL_BACKUP_FILE: "/data/.lnd/data/chain/bitcoin/${BITCOIN_NETWORK}/channel.backup"
+      MACAROON_DIR: "/data/.lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/"
+      CHANNEL_BACKUP_FILE: "/data/.lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/channel.backup"
       BACKUP_STATUS_FILE: "/statuses/backup-status.json"
       JSON_STORE_FILE: "/data/state.json"
     ports:
