use `APP_UMBREL_BITCOIN_RPC_USER`

--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       BITCOIN_ZMQ_RAWBLOCK_PORT: "$APP_UMBREL_BITCOIN_ZMQ_RAWBLOCK_PORT"
       BITCOIN_ZMQ_SEQUENCE_PORT: "$APP_UMBREL_BITCOIN_ZMQ_SEQUENCE_PORT"
       BITCOIN_RPC_PORT: "$APP_UMBREL_BITCOIN_RPC_PORT"
-      BITCOIN_RPC_USER: "$BITCOIN_RPC_USER"
+      BITCOIN_RPC_USER: "$APP_UMBREL_BITCOIN_RPC_USER"
       BITCOIN_RPC_PASS: "$BITCOIN_RPC_PASS"
       RPC_POOLS: "1"
       RPC_POOL_SIZE: "16"
