--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       # Bitcoin Core
       BTCEXP_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       BTCEXP_BITCOIND_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BTCEXP_BITCOIND_USER: $BITCOIN_RPC_USER
+      BTCEXP_BITCOIND_USER: $APP_UMBREL_BITCOIN_RPC_USER
       BTCEXP_BITCOIND_PASS: $BITCOIN_RPC_PASS
       # Electrum
       BTCEXP_ADDRESS_API: electrumx
