--- a/electrumx/docker-compose.yml
+++ b/electrumx/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/data
     environment:
-      DAEMON_URL: http://${BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}
+      DAEMON_URL: http://${APP_UMBREL_BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}
       COIN: BitcoinSegwit
     networks:
        default:
