--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BITCOIN_RPC_USER: $BITCOIN_RPC_USER
+      BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
       LND_IP: $LND_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
