--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       # BITCOIN
       BITCOIND_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIND_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      BITCOIND_RPC_USER: $BITCOIN_RPC_USER
+      BITCOIND_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
       BITCOIND_RPC_PASSWORD: $BITCOIN_RPC_PASS
       BITCOIND_ZMQ_RAWTXS: $APP_UMBREL_BITCOIN_ZMQ_RAWTX_PORT
       BITCOIND_ZMQ_BLK_HASH: $APP_UMBREL_BITCOIN_ZMQ_HASHBLOCK_PORT
