--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       PORT: "3005"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
-      RPC_USER: "${BITCOIN_RPC_USER}"
+      RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
       BITCOIN_RPC_HIDDEN_SERVICE: "${UMBREL_BITCOIN_RPC_HIDDEN_SERVICE}"
       BITCOIN_P2P_HIDDEN_SERVICE: "${UMBREL_BITCOIN_P2P_HIDDEN_SERVICE}"
