--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       ELECTRUM_LOCAL_SERVICE: "${DEVICE_DOMAIN_NAME}"
       ELECTRS_HOST: "${APP_UMBREL_ELECTRS_NODE_IP}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
-      RPC_USER: "${BITCOIN_RPC_USER}"
+      RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
     networks:
       default:
