--- a/umbrel-fulcrum/docker-compose.yml
+++ b/umbrel-fulcrum/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       FULCRUM_HOST: "${APP_UMBREL_FULCRUM_NODE_IP}"
       FULCRUM_STATS_PORT: 8080
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
-      RPC_USER: "${BITCOIN_RPC_USER}"
+      RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
     networks:
