--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       TOR_PROXY_PORT: "${TOR_PROXY_PORT}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
-      RPC_USER: "${BITCOIN_RPC_USER}"
+      RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
       LND_NETWORK: "${APP_UMBREL_BITCOIN_NETWORK}"
       LND_HOST: "${APP_UMBREL_LIGHTNING_NODE_IP}"
