--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         NBXPLORER_SIGNALFILEDIR: "/data"
         NBXPLORER_BTCRPCURL: "http://$APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_RPC_PORT"
         NBXPLORER_BTCNODEENDPOINT: $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_P2P_PORT
-        NBXPLORER_BTCRPCUSER: $BITCOIN_RPC_USER
+        NBXPLORER_BTCRPCUSER: $APP_UMBREL_BITCOIN_RPC_USER
         NBXPLORER_BTCRPCPASSWORD: $BITCOIN_RPC_PASS
     networks:
       default:
