--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     environment:
       CORE_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       CORE_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      CORE_RPC_USERNAME: $BITCOIN_RPC_USER
+      CORE_RPC_USERNAME: $APP_UMBREL_BITCOIN_RPC_USER
       CORE_RPC_PASSWORD: $BITCOIN_RPC_PASS
       ELECTRUM_HOST: $ELECTRUM_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
