--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       # Bitcoin Core connection details
       SQUEAKNODE_BITCOIN_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       SQUEAKNODE_BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
-      SQUEAKNODE_BITCOIN_RPC_USER: $BITCOIN_RPC_USER
+      SQUEAKNODE_BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
       SQUEAKNODE_BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
       SQUEAKNODE_BITCOIN_ZEROMQ_HASHBLOCK_PORT: $APP_UMBREL_BITCOIN_ZMQ_HASHBLOCK_PORT
 
