--- a/umbrel-electrumx/docker-compose.yml
+++ b/umbrel-electrumx/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       ELECTRUM_LOCAL_SERVICE: "${DEVICE_DOMAIN_NAME}"
       ELECTRUM_HOST: "${APP_UMBREL_ELECTRUMX_NODE_IP}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
-      RPC_USER: "${BITCOIN_RPC_USER}"
+      RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
     networks:
       default:
@@ -28,7 +28,7 @@ services:
     depends_on:
       - bitcoind
     environment:
-      DAEMON_URL: "http://${BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
+      DAEMON_URL: "http://${APP_UMBREL_BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       COIN: BitcoinSegwit
       NET: "${APP_UMBREL_BITCOIN_NETWORK}"
     volumes:
