--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       CORE_RPC_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       CORE_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       CORE_RPC_USERNAME: $APP_UMBREL_BITCOIN_RPC_USER
-      CORE_RPC_PASSWORD: $BITCOIN_RPC_PASS
+      CORE_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
       ELECTRUM_HOST: $ELECTRUM_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
       ELECTRUM_TLS: "false"
