--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
       RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
-      RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
+      RPC_PASSWORD: "${APP_UMBREL_BITCOIN_RPC_PASS}"
       BITCOIN_RPC_HIDDEN_SERVICE: "${APP_UMBREL_BITCOIN_RPC_HIDDEN_SERVICE}"
       BITCOIN_P2P_HIDDEN_SERVICE: "${APP_UMBREL_BITCOIN_P2P_HIDDEN_SERVICE}"
     networks:
