--- a/umbrel-electrumx/docker-compose.yml
+++ b/umbrel-electrumx/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       ELECTRUM_HOST: "${APP_UMBREL_ELECTRUMX_NODE_IP}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
-      RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
+      RPC_PASSWORD: "${APP_UMBREL_BITCOIN_RPC_PASS}"
     networks:
       default:
         ipv4_address: $APP_UMBREL_ELECTRUMX_IP
@@ -28,7 +28,7 @@ services:
     depends_on:
       - bitcoind
     environment:
-      DAEMON_URL: "http://${APP_UMBREL_BITCOIN_RPC_USER}:${BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
+      DAEMON_URL: "http://${APP_UMBREL_BITCOIN_RPC_USER}:${APP_UMBREL_BITCOIN_RPC_PASS}@${APP_UMBREL_BITCOIN_NODE_IP}:${APP_UMBREL_BITCOIN_RPC_PORT}"
       COIN: BitcoinSegwit
       NET: "${APP_UMBREL_BITCOIN_NETWORK}"
     volumes:
