--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_UMBREL_BITCOIN_RPC_PORT}"
       RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
-      RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
+      RPC_PASSWORD: "${APP_UMBREL_BITCOIN_RPC_PASS}"
       LND_NETWORK: "${APP_UMBREL_BITCOIN_NETWORK}"
       LND_HOST: "${APP_UMBREL_LIGHTNING_NODE_IP}"
       LND_REST_HIDDEN_SERVICE_FILE: "${UMBREL_LIGHTNING_REST_HIDDEN_SERVICE}"
