--- a/bitfeed/docker-compose.yml
+++ b/bitfeed/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       BITCOIN_ZMQ_SEQUENCE_PORT: "$APP_UMBREL_BITCOIN_ZMQ_SEQUENCE_PORT"
       BITCOIN_RPC_PORT: "$APP_UMBREL_BITCOIN_RPC_PORT"
       BITCOIN_RPC_USER: "$APP_UMBREL_BITCOIN_RPC_USER"
-      BITCOIN_RPC_PASS: "$BITCOIN_RPC_PASS"
+      BITCOIN_RPC_PASS: "$APP_UMBREL_BITCOIN_RPC_PASS"
       RPC_POOLS: "1"
       RPC_POOL_SIZE: "16"
       LOG_LEVEL: "info"
