--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         NBXPLORER_BTCRPCURL: "http://$APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_RPC_PORT"
         NBXPLORER_BTCNODEENDPOINT: $APP_UMBREL_BITCOIN_NODE_IP:$APP_UMBREL_BITCOIN_P2P_PORT
         NBXPLORER_BTCRPCUSER: $APP_UMBREL_BITCOIN_RPC_USER
-        NBXPLORER_BTCRPCPASSWORD: $BITCOIN_RPC_PASS
+        NBXPLORER_BTCRPCPASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
     networks:
       default:
         ipv4_address: $APP_BTCPAY_SERVER_NBXPLORER_IP
