--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       jm_rpc_host: $APP_UMBREL_BITCOIN_NODE_IP
       jm_rpc_port: $APP_UMBREL_BITCOIN_RPC_PORT
       jm_rpc_user: $APP_UMBREL_BITCOIN_RPC_USER
-      jm_rpc_password: "${BITCOIN_RPC_PASS}"
+      jm_rpc_password: "${APP_UMBREL_BITCOIN_RPC_PASS}"
       jm_rpc_wallet_file: jam_default
       jm_network: $APP_UMBREL_BITCOIN_NETWORK
       jm_max_cj_fee_abs: 300000 # in sats
