--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       BITCOIN_S_BITCOIND_HOST: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_S_BITCOIND_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_S_BITCOIND_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BITCOIN_S_BITCOIND_PASSWORD: $BITCOIN_RPC_PASS
+      BITCOIN_S_BITCOIND_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
       BITCOIN_S_SERVER_RPC_PASSWORD: $APP_PASSWORD
     ports:
       - "$APP_SUREDBITS_WALLET_P2P_PORT:$APP_SUREDBITS_WALLET_P2P_PORT"
