--- a/umbrel-electrs/docker-compose.yml
+++ b/umbrel-electrs/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       ELECTRS_HOST: "${APP_UMBREL_ELECTRS_NODE_IP}"
       BITCOIN_HOST: "${APP_UMBREL_BITCOIN_NODE_IP}"
       RPC_USER: "${APP_UMBREL_BITCOIN_RPC_USER}"
-      RPC_PASSWORD: "${BITCOIN_RPC_PASS}"
+      RPC_PASSWORD: "${APP_UMBREL_BITCOIN_RPC_PASS}"
     networks:
       default:
         ipv4_address: $APP_UMBREL_ELECTRS_IP
