--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
-      BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
+      BITCOIN_RPC_PASS: $APP_UMBREL_BITCOIN_RPC_PASS
       BITCOIN_RPC_AUTH: $BITCOIN_RPC_AUTH
     networks:
       default:
