Use `APP_UMBREL_BITCOIN_COMMAND`

--- a/umbrel-bitcoin/docker-compose.yml
+++ b/umbrel-bitcoin/docker-compose.yml
@@ -24,7 +24,7 @@ services:
 
   bitcoind:
     image: lncm/bitcoind:v22.0@sha256:37a1adb29b3abc9f972f0d981f45e41e5fca2e22816a023faa9fdc0084aa4507
-    command: "${BITCOIN_COMMAND}"
+    command: "${APP_UMBREL_BITCOIN_COMMAND}"
     restart: on-failure
     stop_grace_period: 15m30s
     volumes:
