Use `APP_UMBREL_BITCOIN_RPC_AUTH`

--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $APP_UMBREL_BITCOIN_RPC_USER
       BITCOIN_RPC_PASS: $APP_UMBREL_BITCOIN_RPC_PASS
-      BITCOIN_RPC_AUTH: $BITCOIN_RPC_AUTH
+      BITCOIN_RPC_AUTH: $APP_UMBREL_BITCOIN_RPC_AUTH
     networks:
       default:
           ipv4_address: $APP_URBIT_BITCOIN_CONNECTOR_IP
