--- a/umbrel-fulcrum/docker-compose.yml
+++ b/umbrel-fulcrum/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   fulcrum:
     image: cculianu/fulcrum
     init: true
-    command: "${FULCRUM_COMMAND}"
+    command: "${APP_UMBREL_FULCRUM_COMMAND}"
     volumes:
       - "${APP_UMBREL_BITCOIN_DATA_DIR}:/data/.bitcoin:ro"
       - "${APP_DATA_DIR}/data:/data"
