Fix for lightning

--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   
   lnd:
     image: lightninglabs/lnd:v0.14.1-beta@sha256:810f290f4da51adaf57d53bc1f1e65b52b03c543f322da0b98fb8c47be94a27a
-    command: "${LND_COMMAND}"
+    command: "${APP_UMBREL_LIGHTNING_LND_COMMAND}"
     user: 1000:1000
     restart: on-failure
     volumes:
