--- a/helipad/docker-compose.yml
+++ b/helipad/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ${APP_DATA_DIR}/data:/data
       - ${LND_DATA_DIR}:/lnd:ro
     environment:
-      LND_URL: "$LND_IP:$LND_GRPC_PORT"
+      LND_URL: "$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT"
     networks:
       default:
         ipv4_address: $APP_HELIPAD_IP
