--- a/lightning-terminal/docker-compose.yml
+++ b/lightning-terminal/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         - --insecure-httplisten=0.0.0.0:$APP_LIGHTNING_TERMINAL_PORT
         - --network="$APP_UMBREL_BITCOIN_NETWORK"
         - --lnd-mode="remote"
-        - --remote.lnd.rpcserver=$LND_IP:$LND_GRPC_PORT
+        - --remote.lnd.rpcserver=$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT
         - --remote.lnd.macaroonpath="/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
         - --remote.lnd.tlscertpath="/lnd/tls.cert"
     networks:
