--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       DATA_DIR: "/data"
       # Lightning node connection details
       LND_DATA_DIR: $LND_DATA_DIR
-      LND_HOST: $LND_IP
+      LND_HOST: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
       MACAROON_FILE: /lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/invoice.macaroon
       TLS_FILE: /lnd/tls.cert
