--- a/sparkkiosk/docker-compose.yml
+++ b/sparkkiosk/docker-compose.yml
@@ -20,7 +20,7 @@ services:
    
 
       # LND
-      LND_GRPC_ENDPOINT: $LND_IP
+      LND_GRPC_ENDPOINT: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
       LND_GRPC_CERT: "/lnd/tls.cert"
       LND_GRPC_MACAROON: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
