--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       SQUEAKNODE_BITCOIN_ZEROMQ_HASHBLOCK_PORT: $APP_UMBREL_BITCOIN_ZMQ_HASHBLOCK_PORT
 
       # LND environment variables
-      SQUEAKNODE_LND_HOST: $LND_IP
+      SQUEAKNODE_LND_HOST: $APP_UMBREL_LIGHTNING_NODE_IP
       SQUEAKNODE_LND_RPC_PORT: $LND_GRPC_PORT
       SQUEAKNODE_LND_TLS_CERT_PATH: "/lnd/tls.cert"
       SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
