--- a/thunderhub/docker-compose.yml
+++ b/thunderhub/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       NO_VERSION_CHECK: "true"
       LOG_LEVEL: "debug"
       ACCOUNT_CONFIG_PATH: "/data/thubConfig.yaml"
-      YML_ENV_1: "$LND_IP:$LND_GRPC_PORT"
+      YML_ENV_1: "$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT"
       TOR_PROXY_SERVER: "socks://$TOR_PROXY_IP:$TOR_PROXY_PORT"
     networks:
       default:
