--- a/kollider/docker-compose.yml
+++ b/kollider/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${LND_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data/logs:/app/logs
     environment:
-      LND_IP: $LND_IP
+      LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_ZMQ_SUB_ADDRESS: "tcp://${APP_KOLLIDER_WS_IP}:5556"
     networks:
       default:
