--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - ${LND_DATA_DIR}:/lnd:ro
     environment:
-      LND_IP: $LND_IP
+      LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
       BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
