--- a/sphinx-relay/docker-compose.yml
+++ b/sphinx-relay/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ${APP_DATA_DIR}/data:/relay/.lnd/
     environment:
       PUBLIC_URL: "$APP_HIDDEN_SERVICE:$APP_SPHINX_RELAY_PORT"
-      LND_IP: $LND_IP
+      LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       CONNECT_UI: "true"
       LND_PORT: $LND_GRPC_PORT
       TLS_LOCATION: /lnd/tls.cert
