--- a/tallycoin-connect/docker-compose.yml
+++ b/tallycoin-connect/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${LND_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data:/data
     environment:
-      LND_SOCKET: "$LND_IP:$LND_GRPC_PORT"
+      LND_SOCKET: "$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT"
       LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
       LND_TLSCERT_PATH: "/lnd/tls.cert"
       CONFIG_FILE: "/data/tallycoin_api.key"
