--- a/usocial/docker-compose.yml
+++ b/usocial/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
         USOCIAL_JOB: "WEB"
         APP_PASSWORD: "${APP_PASSWORD}"
-        LND_IP: "${LND_IP}"
+        LND_IP: "${APP_UMBREL_LIGHTNING_NODE_IP}"
         LND_GRPC_PORT: ${LND_GRPC_PORT}
         LND_DIR: "/lnd"
     networks:
