Use `APP_UMBREL_LIGHTNING_NODE_PORT`

--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       BACKUP_STATUS_FILE: "/statuses/backup-status.json"
       JSON_STORE_FILE: "/data/state.json"
     ports:
-      - "$LND_NODE_PORT:$LND_NODE_PORT"
+      - "$APP_UMBREL_LIGHTNING_NODE_PORT:$APP_UMBREL_LIGHTNING_NODE_PORT"
       - "$LND_REST_PORT:$LND_REST_PORT"
       - "$LND_GRPC_PORT:$LND_GRPC_PORT"
     networks:
