Use `APP_UMBREL_LIGHTNING_NODE_GRPC_PORT`

--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     user: "1000:1000"
     environment:
       # LND environment variables
-      LND_RPC_AUTHORITY: "$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT"
+      LND_RPC_AUTHORITY: "$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
       TLS_CERT_PATH: "/lnd/tls.cert"
       INVOICES_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/invoice.macaroon"
 
