--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       HOME: "/data"
     command:
       - --network=$APP_UMBREL_BITCOIN_NETWORK
-      - --lnd.host="$APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT"
+      - --lnd.host="$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
       - --lnd.macaroonpath="/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
       - --lnd.tlspath="/lnd/tls.cert"
       - --restlisten=0.0.0.0:8081
