--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       # Lightning node connection details
       LND_DATA_DIR: $LND_DATA_DIR
       LND_HOST: $APP_UMBREL_LIGHTNING_NODE_IP
-      LND_GRPC_PORT: $LND_GRPC_PORT
+      LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
       MACAROON_FILE: /lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/invoice.macaroon
       TLS_FILE: /lnd/tls.cert
       APP_PASSWORD: $APP_PASSWORD
