--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
       # LND environment variables
       SQUEAKNODE_LND_HOST: $APP_UMBREL_LIGHTNING_NODE_IP
-      SQUEAKNODE_LND_RPC_PORT: $LND_GRPC_PORT
+      SQUEAKNODE_LND_RPC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
       SQUEAKNODE_LND_TLS_CERT_PATH: "/lnd/tls.cert"
       SQUEAKNODE_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
 
