--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
       - "$APP_UMBREL_LIGHTNING_NODE_PORT:$APP_UMBREL_LIGHTNING_NODE_PORT"
       - "$LND_REST_PORT:$LND_REST_PORT"
-      - "$LND_GRPC_PORT:$LND_GRPC_PORT"
+      - "$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
     networks:
       default:
         ipv4_address: $APP_UMBREL_LIGHTNING_IP
