--- a/umbrel-lightning/torrc.template
+++ b/umbrel-lightning/torrc.template
@@ -4,7 +4,7 @@ HiddenServicePort $LND_REST_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$LND_REST_PORT
 
 # LND gRPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-grpc
-HiddenServicePort $LND_GRPC_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$LND_GRPC_PORT
+HiddenServicePort $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
 
 # LND Frontend Hidden Service
 HiddenServiceDir /data/app-$APP_ID
