--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${LND_DATA_DIR}:/lnd:ro
     environment:
       LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
-      LND_GRPC_PORT: $LND_GRPC_PORT
+      LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
       BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
       APP_DOMAIN: $APP_DOMAIN
