--- a/sphinx-relay/docker-compose.yml
+++ b/sphinx-relay/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       PUBLIC_URL: "$APP_HIDDEN_SERVICE:$APP_SPHINX_RELAY_PORT"
       LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       CONNECT_UI: "true"
-      LND_PORT: $LND_GRPC_PORT
+      LND_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
       TLS_LOCATION: /lnd/tls.cert
       MACAROON_LOCATION: /lnd/data/chain/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/admin.macaroon
       LND_LOG_LOCATION: /lnd/logs/bitcoin/${APP_UMBREL_BITCOIN_NETWORK}/lnd.log
