--- a/usocial/docker-compose.yml
+++ b/usocial/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         USOCIAL_JOB: "WEB"
         APP_PASSWORD: "${APP_PASSWORD}"
         LND_IP: "${APP_UMBREL_LIGHTNING_NODE_IP}"
-        LND_GRPC_PORT: ${LND_GRPC_PORT}
+        LND_GPRC_PORT: ${APP_UMBREL_LIGHTNING_NODE_GRPC_PORT}
         LND_DIR: "/lnd"
     networks:
       default:
