--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
       # LND
       LNBITS_BACKEND_WALLET_CLASS: LndRestWallet
-      LND_REST_ENDPOINT: https://$APP_UMBREL_LIGHTNING_NODE_IP:$LND_REST_PORT/
+      LND_REST_ENDPOINT: https://$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_REST_PORT/
       LND_REST_CERT: "/lnd/tls.cert"
       LND_REST_MACAROON: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK/admin.macaroon"
 
