--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         LN_IMPLEMENTATION: "LND"
 
         # LND connection details
-        LN_SERVER_URL: "https://$APP_UMBREL_LIGHTNING_NODE_IP:$LND_REST_PORT"
+        LN_SERVER_URL: "https://$APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_REST_PORT"
         MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_UMBREL_BITCOIN_NETWORK"
         CONFIG_PATH: "/lnd/lnd.conf"
 
