--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       JSON_STORE_FILE: "/data/state.json"
     ports:
       - "$APP_UMBREL_LIGHTNING_NODE_PORT:$APP_UMBREL_LIGHTNING_NODE_PORT"
-      - "$LND_REST_PORT:$LND_REST_PORT"
+      - "$APP_UMBREL_LIGHTNING_NODE_REST_PORT:$APP_UMBREL_LIGHTNING_NODE_REST_PORT"
       - "$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT:$APP_UMBREL_LIGHTNING_NODE_GRPC_PORT"
     networks:
       default:
