--- a/umbrel-lightning/torrc.template
+++ b/umbrel-lightning/torrc.template
@@ -1,6 +1,6 @@
 # LND REST Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rest
-HiddenServicePort $LND_REST_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$LND_REST_PORT
+HiddenServicePort $APP_UMBREL_LIGHTNING_NODE_REST_PORT $APP_UMBREL_LIGHTNING_NODE_IP:$APP_UMBREL_LIGHTNING_NODE_REST_PORT
 
 # LND gRPC Hidden Service
 HiddenServiceDir /data/app-$APP_ID-grpc
