Use `APP_UMBREL_LIGHTNING_NODE_DATA_DIR`

--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/files:/files
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     user: "1000:1000"
     environment:
       # LND environment variables
