--- a/bleskomat-server/docker-compose.yml
+++ b/bleskomat-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - db
     volumes:
       - $APP_DATA_DIR/data/web:/usr/src/app/data
-      - $LND_DATA_DIR:/lnd:ro
+      - $APP_UMBREL_LIGHTNING_NODE_DATA_DIR:/lnd:ro
     environment:
       DEBUG: "bleskomat-server*,lnurl*"
       BLESKOMAT_SERVER_HOST: "0.0.0.0"
