--- a/bluewallet/docker-compose.yml
+++ b/bluewallet/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     stop_grace_period: "1m"
     init: true
     volumes:
-      - "${LND_DATA_DIR}:/lnd:ro"
+      - "${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro"
     environment:
       PORT: "${APP_BLUEWALLET_LNDHUB_PORT}"
       TOR_URL: "${APP_HIDDEN_SERVICE}"
