--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "$APP_SQUEAKNODE_GRPC_PORT:$APP_SQUEAKNODE_GRPC_PORT"
     volumes:
       - ${APP_DATA_DIR}/sqk:/sqk
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     user: "1000:1000"
     environment:
       # Bitcoin Core connection details
