--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
         - ${APP_DATA_DIR}/data/btcpay:/data
         - ${APP_DATA_DIR}/data/nbxplorer:/data/.nbxplorer
-        - ${LND_DATA_DIR}:/lnd:ro
+        - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
         HOME: "/data"
         BTCPAY_DATADIR: "/data"
