--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       # Global
       LNBITS_HOST: "0.0.0.0"
