--- a/lndg/docker-compose.yml
+++ b/lndg/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${LND_DATA_DIR}:/root/.lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
       - ${APP_DATA_DIR}:/lndg/data
     command:
       - sh
