--- a/lnmarkets/docker-compose.yml
+++ b/lnmarkets/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
