--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
     environment:
       PORT: $APP_NODE_RED_PORT
       BITCOIN_NETWORK: $APP_UMBREL_BITCOIN_NETWORK
