--- a/thunderhub/docker-compose.yml
+++ b/thunderhub/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${LND_DATA_DIR}:/lnd:ro
+      - ${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
       - ${APP_DATA_DIR}/data:/data
     entrypoint: /data/entrypoint.sh
     environment:
