--- a/umbrel-lightning/docker-compose.yml
+++ b/umbrel-lightning/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     image: cookiemonster123/umbrel-lightning:v1.0.2@sha256:41d651ec0ba1fba9173bd06cbf2a1093dd2ba0485432aea177a9255ae3211934
     restart: on-failure
     volumes:
-      - "${LND_DATA_DIR}:/data/.lnd"
+      - "${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/data/.lnd"
       - "${APP_DATA_DIR}/data/lightning:/data"
       - "${UMBREL_ROOT}/statuses:/statuses"
     environment:
@@ -44,7 +44,7 @@ services:
     user: 1000:1000
     restart: on-failure
     volumes:
-      - "${LND_DATA_DIR}:/data/.lnd"
+      - "${APP_UMBREL_LIGHTNING_NODE_DATA_DIR}:/data/.lnd"
     environment:
       HOME: /data
     networks:
