Use `APP_UMBREL_ELECTRS_NODE_IP`

--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       CORE_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
       CORE_RPC_USERNAME: $APP_UMBREL_BITCOIN_RPC_USER
       CORE_RPC_PASSWORD: $APP_UMBREL_BITCOIN_RPC_PASS
-      ELECTRUM_HOST: $ELECTRUM_IP
+      ELECTRUM_HOST: $APP_UMBREL_ELECTRS_NODE_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
       ELECTRUM_TLS: "false"
       DATABASE_HOST: $APP_MEMPOOL_DB_IP
