--- a/node-red/docker-compose.yml
+++ b/node-red/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       BITCOIN_RPC_PASS: $APP_UMBREL_BITCOIN_RPC_PASS
       LND_IP: $APP_UMBREL_LIGHTNING_NODE_IP
       LND_GPRC_PORT: $APP_UMBREL_LIGHTNING_NODE_GRPC_PORT
-      ELECTRUM_IP: $ELECTRUM_IP
+      ELECTRUM_IP: $APP_UMBREL_ELECTRS_NODE_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
     networks:
       default:
