--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       EXPLORER_INSTALL: "off"
 
       # INDEXER
-      INDEXER_IP: $ELECTRUM_IP
+      INDEXER_IP: $APP_UMBREL_ELECTRS_NODE_IP
       INDEXER_RPC_PORT: $ELECTRUM_PORT
       INDEXER_PROTOCOL: tcp
       INDEXER_BATCH_SUPPORT: inactive # 'active' for ElectrumX, 'inactive' otherwise
