--- a/itchysats/docker-compose.yml
+++ b/itchysats/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - --password=$APP_PASSWORD
       - --umbrel-seed=$APP_SEED
       - $APP_UMBREL_BITCOIN_NETWORK
-      - --electrum=tcp://$ELECTRUM_IP:$ELECTRUM_PORT
+      - --electrum=tcp://$APP_UMBREL_ELECTRS_NODE_IP:$ELECTRUM_PORT
 
     networks:
       default:
