--- a/urbit-bitcoin-connector/docker-compose.yml
+++ b/urbit-bitcoin-connector/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${APP_URBIT_BITCOIN_CONNECTOR_SERVER_PORT}:${APP_URBIT_BITCOIN_CONNECTOR_SERVER_PORT}
     environment:
       INTERNAL_IP: $APP_URBIT_BITCOIN_CONNECTOR_IP
-      ELECTRUM_IP: $ELECTRUM_IP
+      ELECTRUM_IP: $APP_UMBREL_ELECTRS_NODE_IP
       ELECTRUM_PORT: $ELECTRUM_PORT
       BITCOIN_IP: $APP_UMBREL_BITCOIN_NODE_IP
       BITCOIN_RPC_PORT: $APP_UMBREL_BITCOIN_RPC_PORT
